
SUBDIRS = \
    cashflows \
    currencies \
    indexes \
    instruments \
    legacy \
    math \
    methods \
    models \
    patterns \
    pricingengines \
    processes \
    quotes \
    termstructures \
    time \
    utilities

AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
	auto_link.hpp \
	cashflow.hpp \
	compounding.hpp \
	config.hpp \
	currency.hpp \
	discretizedasset.hpp \
	errors.hpp \
	exchangerate.hpp \
	exercise.hpp \
	event.hpp \
	grid.hpp \
	handle.hpp \
	index.hpp \
	instrument.hpp \
	interestrate.hpp \
	money.hpp \
	numericalmethod.hpp \
	option.hpp \
	payoff.hpp \
	position.hpp \
	prices.hpp \
	pricingengine.hpp \
	qldefines.hpp \
	quantlib.hpp \
	quote.hpp \
	settings.hpp \
	stochasticprocess.hpp \
	termstructure.hpp \
	timegrid.hpp \
	timeseries.hpp \
	types.hpp \
	volatilitymodel.hpp

libQuantLib_la_SOURCES = \
    currency.cpp \
	discretizedasset.cpp \
	errors.cpp \
	exchangerate.cpp \
	exercise.cpp \
    index.cpp \
    interestrate.cpp \
    money.cpp \
    position.cpp \
    prices.cpp \
    settings.cpp \
	stochasticprocess.cpp \
	timegrid.cpp

lib_LTLIBRARIES = libQuantLib.la
libQuantLib_la_LDFLAGS = -release $(PACKAGE_VERSION)

libQuantLib_la_LIBADD = \
    cashflows/libCashFlows.la \
    currencies/libCurrencies.la \
    indexes/libIndexes.la \
    instruments/libInstruments.la \
    legacy/libLegacy.la \
    math/libMath.la \
    methods/libMethods.la \
    models/libModels.la \
    pricingengines/libPricingEngines.la \
    processes/libProcesses.la \
    quotes/libQuotes.la \
    termstructures/libTermStructures.la \
    time/libTime.la \
    utilities/libUtilities.la

EXTRA_DIST= \
	config.ansi.hpp \
	config.msvc.hpp \
	config.mwcw.hpp \
	config.mingw.hpp \
	userconfig.hpp

quantlib.hpp: Makefile.am
	echo "/* This file is automatically generated; do not edit.     */" > $@
	echo "/* Add the files to be included into Makefile.am instead. */" >> $@
	echo >> $@
	echo "#include <ql/qldefines.hpp>" >> $@
	echo "#ifdef BOOST_MSVC" >> $@
	echo "#  include <ql/auto_link.hpp>" >> $@
	echo "#endif" >> $@
	echo >> $@
	for i in $(filter-out auto_link.hpp config.hpp quantlib.hpp qldefines.hpp, \
	           $(this_include_HEADERS)); do \
		echo "#include <${subdir}/$$i>" >> $@; \
	done
	echo >> $@
	subdirs='$(SUBDIRS)'; for i in $$subdirs; do \
		echo "#include <${subdir}/$$i/all.hpp>" >> $@; \
	done

install-data-hook:
	$(SED) -e "s,HAVE_CONFIG_H,QL_HAVE_CONFIG_H," \
           -e "s,/\* install-hook \*/,#define QL_HAVE_CONFIG_H," \
           $(DESTDIR)/$(this_includedir)/qldefines.hpp > .qldefines.hpp
	$(INSTALL_DATA) .qldefines.hpp $(DESTDIR)/$(this_includedir)/qldefines.hpp
	rm .qldefines.hpp
	$(SED) -e "s,PACKAGE,QL_PACKAGE," \
           -e "s,STDC,QL_STDC," \
           -e "s, HAVE, QL_HAVE," \
           -e "s, VERSION, QL_AC_VERSION," \
           $(DESTDIR)/$(this_includedir)/config.hpp > .config.hpp
	$(INSTALL_DATA) .config.hpp $(DESTDIR)/$(this_includedir)/config.hpp
	rm .config.hpp
depend:
	makedepend $(INCLUDES) -- $(CFLAGS) -- $(SOURCES)

if ENABLE_STATIC

install-exec-hook:
	mv $(DESTDIR)/$(libdir)/libQuantLib.a $(DESTDIR)/$(libdir)/libQuantLib-$(PACKAGE_VERSION).a
	$(LN_S) libQuantLib-$(PACKAGE_VERSION).a $(DESTDIR)/$(libdir)/libQuantLib.a
endif


